--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,9 @@ jobs:
           pip install -r requirements.txt
       - name: Run Tests
         run: |
+          pip install pytest
           pytest tests/  # Ensure you have test cases inside a 'tests/' folder
+      
   docker-build-and-push:
     needs: build-and-test
     runs-on: ubuntu-latest
