--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: CI/CD Pipeline for FastAPI
 on:
   push:
     branches:
-      - main  # Triggers workflow on push to main branch
+      - main  # Triggers workflow on push to 'main' branch
 
 jobs:
   build-and-test:
