--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
 name: CI/CD Pipeline for FastAPI
 
-on: 
+on:
   push:
     branches:
-      - main
+      - main  # Runs on every push to the "main" branch
 
 jobs:
   build-and-test:
@@ -12,61 +12,53 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      # ✅ Add Git Safe Directory Fix Here
-      - name: Fix Git safe directory warning
-        run: git config --global --add safe.directory '*'
-
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
-          python-version: '3.9'
+          python-version: "3.9"
 
       - name: Install Dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
+
+      - name: Fix Git safe directory warning
+        run: git config --global --add safe.directory '*'
 
       - name: Run Tests
         run: pytest tests/
-  
+
   docker-build-and-push:
-    runs-on: ubuntu-latest
     needs: build-and-test
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
-
-      # ✅ Add Git Safe Directory Fix Here (Just in case)
-      - name: Fix Git safe directory warning
-        run: git config --global --add safe.directory '*'
 
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Build Docker Image
-        run: docker build -t fastapi-app .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/fastapi-app .
 
       - name: Push Docker Image to Docker Hub
-        run: docker push fastapi-app
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/fastapi-app
 
   deploy:
-    runs-on: ubuntu-latest
     needs: docker-build-and-push
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      # ✅ Add Git Safe Directory Fix Here
-      - name: Fix Git safe directory warning
-        run: git config --global --add safe.directory '*'
-
-      - name: Deploy to Server via SSH
+      - name: Deploy to Server via SSH (Password Authentication)
         uses: appleboy/ssh-action@v0.1.4
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           password: ${{ secrets.SERVER_PASSWORD }}
           script: |
-            docker pull fastapi-app
+            docker pull ${{ secrets.DOCKER_USERNAME }}/fastapi-app
             docker stop fastapi-container || true
             docker rm fastapi-container || true
-            docker run -d -p 8000:8000 --name fastapi-container fastapi-app
+            docker run -d -p 8000:8000 --name fastapi-container ${{ secrets.DOCKER_USERNAME }}/fastapi-app
